@@ -26,6 +26,7 @@ S3method(makePopup,shiny.tag)
 export(addGlPoints)
 export(addGlPolygons)
 export(addGlPolylines)
+export(clearGlGroup)
 export(clearGlLayers)
 export(leafglOutput)
 export(makeColorMatrix)
