@@ -35,7 +35,8 @@ LeafletWidget.methods.addGlifyPolygons = function(data, cols, popup, label,
     opacity: opacity,
     className: group,
     border: stroke,
-    pane: pane
+    pane: pane,
+    layerId: layerId
   };
 
   // append dotOptions to layer arguments
@@ -46,6 +47,8 @@ LeafletWidget.methods.addGlifyPolygons = function(data, cols, popup, label,
 
   // add layer to map using leaflet's layerManager
   map.layerManager.addLayer(shapeslayer.layer, "glify", layerId, group);
+
+  addGlifyEventListeners(map)
 };
 
 
