@@ -1,14 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/glify-remove-clear.R
-\name{clearGlLayers}
-\alias{clearGlLayers}
-\title{clearGlLayers}
-\usage{
-clearGlLayers(map)
-}
-\arguments{
-\item{map}{The map widget}
-}
-\description{
-Clear all Glify features
-}
